# Vox

./: .gitignore  API.md  PROTOCOL HTTP.md  PROTOCOL.md  alembic.ini  mkdocs.yml  pyproject.toml  vox.proto  voxhttp.proto
alembic/: env.py
alembic/versions/: 9713e33403d0_initial.py  98a0cee110c2_add_mls_key_packages_table.py
crates/vox-sfu/: Cargo.toml  pyproject.toml
crates/vox-sfu/src/: endpoint.rs  header.rs  lib.rs  state.rs  tls.rs
docs/: API.md  DDL.py  E2EE.md  FEDERATION.md  GATEWAY.md  MEDIA.md  PROTOCOL.md  index.md  voxhttp.proto
docs/api/: authentication.md  bots.md  channels.md  conventions.md  dms.md  emoji.md  files.md  index.md  members.md  messages.md  moderation.md  search-sync.md  server.md  threads.md  users.md  voice.md  webhooks.md
docs/architecture/: database.md  ids.md  index.md  message-format.md  permissions.md  server-hierarchy.md  transport-layers.md
docs/development/: index.md  setup.md  testing.md
docs/federation/: endpoints.md  index.md
docs/gateway/: connection.md  events.md  index.md
docs/getting-started/: configuration.md  deployment.md  index.md  installation.md  quick-start.md
docs/media/: index.md  svc.md
docs/reference/: errors.md  index.md  rate-limits.md
docs/sdk/: client.md  gateway-client.md  index.md  quickstart.md
docs/security/: device-pairing.md  e2ee.md  index.md  two-factor.md
sdk/: pyproject.toml
sdk/crates/vox-media/: Cargo.toml
sdk/crates/vox-media/src/: audio.rs  codec.rs  lib.rs  quic.rs  state.rs  video.rs
sdk/src/vox_sdk/: __init__.py  client.py  errors.py  gateway.py  http.py
sdk/tests/: test_api_groups.py  test_gateway.py  test_http.py  test_models.py  test_pagination.py  test_rate_limit.py
src/vox/: __main__.py  audit.py  config.py  interactions.py  limits.py  permissions.py  ratelimit.py  storage.py  validators.py
tests/: conftest.py  test_auth.py  test_bots.py  test_channels.py  test_completeness.py  test_coverage_gaps.py  test_deps.py  test_dms.py  test_e2ee.py  test_embeds.py  test_emoji.py  test_error_codes.py  test_federation.py  test_federation_admin.py  test_files.py  test_gateway.py  test_gateway_info.py  test_integration.py  test_interactions.py  test_invites.py  test_members.py  test_messages.py  test_moderation.py  test_notify.py  test_permissions.py  test_ratelimit.py  test_roles.py  test_search.py  test_server.py  test_storage.py  test_sync.py  test_users.py  test_voice.py  test_webhooks.py
(+78 files in other folders)
