[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vox-server"
version = "0.1.0"
description = "Vox Protocol v1 server SDK"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "websockets>=13.0",
    "pydantic>=2.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "cryptography>=43.0",
    "pyotp>=2.9",
    "webauthn>=2.0",
    "dnspython>=2.6",
    "vox-sfu",
    "zstandard>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "maturin>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
