[package]
name = "vox-sfu"
version = "0.1.0"
edition = "2021"

[lib]
name = "vox_sfu"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-util = "0.7"
