[package]
name = "vox-media"
version = "0.1.0"
edition = "2021"

[lib]
name = "vox_media"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
opus = "0.3"
cpal = "0.15"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
tokio-util = "0.7"
